# demo-2d

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: click_effect.cpp.C7C6CC38C025EE6C.idx  cube.cpp.3ACD873467CA193E.idx  cute.cpp.22BE26DEA4713168.idx  font.cpp.9197AE37B9850F5E.idx  loading.cpp.D1B51C45981B9821.idx
src/: click_effect.cpp  cube.cpp  cute.cpp  font.cpp  loading.cpp
src/include/: circle.h  oop.h
